--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Registrieren | Game Panel</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/loginstyle.css">
 </head>
 <body>
 
+    
+
+    <div class="bg-glow1"></div>
+
 <div class="center-box">
+    <div class="infotext">
     <h1>Registrieren</h1>
 
-    <input type="text" placeholder="Benutzername">
-    <input type="password" placeholder="Passwort">
-    <input type="password" placeholder="Passwort wiederholen">
+    <input class="infoinput" type="text" placeholder="Benutzername" required minlength="3" maxlength="20">
+    <input class="infoinput" type="email" placeholder="E-Mail" required>
+    <input class="infoinput" type="password" placeholder="Passwort" required minlength="5">
+    <input class="infoinput" type="password" placeholder="Passwort wiederholen" required minlength="5">
 
-    <button>Account erstellen</button>
-
-    <p style="margin-top: 15px; text-align: center;">
-        <a href="login.html">Zurück zum Login</a>
-    </p>
+    <button type="submit" class="submit-btn">Account erstellen</button>
+        <a href="login.html" class="back-link">Zurück zum Login</a>
+   
+    </div>
 </div>
 
 </body>
